# ha-stiebel-control-py

./: README.md  entity_config.yaml  install.sh  pyproject.toml  requirements.txt  service_config.yaml  stiebel-control.service  test_can.py  test_config.py  test_entity_services.py  test_lifecycle.py  test_services.py
stiebel_control/: __init__.py  __main__.py  can_interface.py  command_handler.py  config_manager.py  elster_table.py  entity_manager.py  lifecycle.py  main.py  mock_can_interface.py  mqtt_interface.py  signal_gateway.py  signal_processor.py
stiebel_control/can/: interface.py  protocol.py  signal_handler.py  transport.py
stiebel_control/config/: __init__.py  config_manager.py  config_models.py
stiebel_control/ha_mqtt/: __init__.py  command_handler.py  entity_registration_service.py  entity_rules.py  mqtt_interface.py  signal_entity_mapper.py  transformations.py
stiebel_control/heatpump/: elster_signals.yaml  elster_signals_bak.yaml  elster_signals_test.yaml  elster_table.py  pollable_signals.yaml  signal_poller.py
stiebel_control/services/: command_handler.py  entity_registration_service.py  signal_entity_mapper.py  transformation_service.py
stiebel_control/utils/: __init__.py  conversion_utils.py  logging_utils.py
tests/: test_can.py  test_config.py  test_entity_services.py  test_lifecycle.py  test_mqtt.py  test_services.py  test_signal_poller.py
tools/: ElsterTable_reduced.h  can_scan.py  convert_elster_table.py  convert_elster_table_improved.py  test_signals.txt
